--- a/app/src/main/res/layout/top_panel_k.xml
+++ b/app/src/main/res/layout/top_panel_k.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/panelColor"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/backTopPanelText"
@@ -15,6 +14,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
+        android:padding="10dp"
         android:text="@string/back_ico" />
 
     <TextView
@@ -23,6 +23,7 @@
         android:layout_width="100dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:padding="10dp"
         android:layout_weight="4"
         android:gravity="start"
         android:text="Заголовок" />
@@ -42,6 +43,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
+        android:padding="10dp"
         android:text="@string/edit_ico" />
 
     <TextView
@@ -52,6 +54,7 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/search_ico"
+        android:padding="10dp"
         android:visibility="gone" />
 
     <LinearLayout
