--- a/app/src/main/res/drawable/selected_day_button.xml
+++ b/app/src/main/res/drawable/selected_day_button.xml
@@ -7,7 +7,7 @@
             <solid android:color="@color/activeButton"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/grey05" />
+                android:color="@color/transparentGrey" />
             <corners
                 android:radius="8dp" />
             <padding
@@ -20,10 +20,10 @@
 
     <item>
         <shape>
-            <solid android:color="@color/selectedButton"/>
+            <solid android:color="@color/yellow"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/grey05" />
+                android:color="@color/transparentGrey" />
             <corners
                 android:radius="8dp" />
             <padding
