--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <!-- Base application theme. -->
     <style name="allPages" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:background">@color/mainColorBG</item>
+        <item name="android:background">@color/backgroundLightBlue</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
