--- a/app/src/main/res/drawable/category_button.xml
+++ b/app/src/main/res/drawable/category_button.xml
@@ -7,7 +7,7 @@
             <solid android:color="@color/colorCategoryButton"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/grey05" />
+                android:color="@color/transparentGrey" />
             <corners
                 android:radius="4dp" />
         </shape>
