--- a/app/src/main/res/drawable/time_button.xml
+++ b/app/src/main/res/drawable/time_button.xml
@@ -4,10 +4,10 @@
 
     <item android:state_pressed="true" >
         <shape>
-            <solid android:color="@color/selectedButton"/>
+            <solid android:color="@color/yellow"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/grey05" />
+                android:color="@color/transparentGrey" />
             <corners
                 android:radius="8dp" />
             <padding
@@ -24,7 +24,7 @@
             <solid android:color="@color/activeButton"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/grey05" />
+                android:color="@color/transparentGrey" />
             <corners
                 android:radius="8dp" />
             <padding
