--- a/app/src/main/res/layout/subscribers.xml
+++ b/app/src/main/res/layout/subscribers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainColorBG"
+    android:background="@color/backgroundLightBlue"
     tools:context="com.bunbeauty.ideal.myapplication.subscriptions.Subscribers">
 
     <LinearLayout
