schedule activity was updated

--- a/app/src/main/res/drawable/selected_day_button.xml
+++ b/app/src/main/res/drawable/selected_day_button.xml
@@ -4,7 +4,7 @@
 
     <item android:state_pressed="true" >
         <shape>
-            <solid android:color="@color/activeButton"/>
+            <solid android:color="@color/white"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/transparentGrey" />
