--- a/app/src/main/res/drawable/white_button.xml
+++ b/app/src/main/res/drawable/white_button.xml
@@ -10,27 +10,17 @@
                 android:color="@color/transparentGrey" />
             <corners
                 android:radius="8dp" />
-            <padding
-                android:top="5dp"
-                android:bottom="5dp"
-                android:left="5dp"
-                android:right="5dp"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@color/activeButton"/>
+            <solid android:color="@color/white"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/transparentGrey" />
             <corners
                 android:radius="8dp" />
-            <padding
-                android:top="5dp"
-                android:bottom="5dp"
-                android:left="5dp"
-                android:right="5dp"/>
         </shape>
     </item>
 </selector>
