--- a/app/src/main/res/layout/premium_element.xml
+++ b/app/src/main/res/layout/premium_element.xml
@@ -77,7 +77,7 @@
 
         <Button
             android:id="@+id/setPremiumPremiumElementBtn"
-            style="@style/mainButtonOther"
+            style="@style/mainButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
