--- a/app/src/main/res/layout/service_activity.xml
+++ b/app/src/main/res/layout/service_activity.xml
@@ -153,7 +153,7 @@
 
     <Button
         android:id="@+id/scheduleServiceBtn"
-        style="@style/mainButtonOther"
+        style="@style/mainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Расписание"
