--- a/app/src/main/res/drawable/time_button.xml
+++ b/app/src/main/res/drawable/time_button.xml
@@ -21,7 +21,7 @@
 
     <item>
         <shape>
-            <solid android:color="@color/activeButton"/>
+            <solid android:color="@color/white"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/transparentGrey" />
