--- a/app/src/main/res/layout/authorization.xml
+++ b/app/src/main/res/layout/authorization.xml
@@ -54,7 +54,7 @@
 
     <Button
         android:id="@+id/verifyAuthorizationBtn"
-        style="@style/mainButtonLogIn"
+        style="@style/loginButton"
         android:text="Войти"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
