--- a/app/src/main/res/layout/creation_service.xml
+++ b/app/src/main/res/layout/creation_service.xml
@@ -115,7 +115,7 @@
 
     <Button
         android:id="@+id/addServiceCreationServiceBtn"
-        style="@style/mainButtonOther"
+        style="@style/mainButton"
         android:text="@string/addServices"
         app:layout_constraintBottom_toTopOf="@+id/bottomPanelLayout"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -123,7 +123,7 @@
 
     <Button
         android:id="@+id/continueCreationServiceBtn"
-        style="@style/mainButtonOther"
+        style="@style/mainButton"
         android:text="Продолжить"
         app:layout_constraintBottom_toTopOf="@+id/bottomPanelLayout"
         app:layout_constraintLeft_toLeftOf="parent"
