--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -103,7 +103,7 @@
     </ScrollView>
     <Button
     android:id="@+id/editServiceEditServiceBtn"
-    style="@style/mainButtonOther"
+    style="@style/mainButton"
     android:layout_width="wrap_content"
     android:layout_height="0dp"
     android:layout_gravity="center"
