--- a/app/src/main/res/layout/message_element.xml
+++ b/app/src/main/res/layout/message_element.xml
@@ -28,7 +28,7 @@
 
     <Button
         android:id="@+id/canceledMessageElementBtn"
-        style="@style/smallMainButtonOther"
+        style="@style/smallMainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
