--- a/app/src/main/res/layout/my_calendar.xml
+++ b/app/src/main/res/layout/my_calendar.xml
@@ -18,7 +18,7 @@
 
     <Button
         android:id="@+id/continueMyCalendarBtn"
-        style="@style/mainButtonOther"
+        style="@style/mainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Продолжить"
