--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -61,7 +61,7 @@
 
     <Button
         android:id="@+id/saveRegistrationBtn"
-        style="@style/mainButtonLogIn"
+        style="@style/loginButton"
         android:text="сохранить данные"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
