--- a/app/src/main/res/layout/dialog_element.xml
+++ b/app/src/main/res/layout/dialog_element.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialogElementLayout"
     style="@style/block"
+    android:padding="3dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/block_text"
