--- a/app/src/main/res/layout/service_photo_element.xml
+++ b/app/src/main/res/layout/service_photo_element.xml
@@ -13,7 +13,7 @@
         android:layout_height="@dimen/photo_height"
         tools:src="@tools:sample/avatars" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/cancelServicePhotoElement"
         android:layout_width="30dp"
         android:layout_marginStart="-30dp"
