--- a/app/src/main/res/drawable/white_button.xml
+++ b/app/src/main/res/drawable/white_button.xml
@@ -18,7 +18,7 @@
             <solid android:color="@color/white"/>
             <stroke
                 android:width="3dp"
-                android:color="@color/transparentGrey" />
+                android:color="@color/yellow" />
             <corners
                 android:radius="8dp" />
         </shape>
