--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -101,7 +101,7 @@
                 android:indeterminateTint="@color/panelColor" />
         </LinearLayout>
     </ScrollView>
-    <Button
+    <com.google.android.material.button.MaterialButton
     android:id="@+id/editServiceEditServiceBtn"
     style="@style/mainButton"
     android:layout_width="wrap_content"
