--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/minimizeTagsMainScreenBtn"
                 style="@style/lightBlueButton"
                 android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                 android:gravity="center"
                 android:text="" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/clearTagsMainScreenBtn"
                 style="@style/lightBlueButton"
                 android:layout_width="wrap_content"
