--- a/app/src/main/res/layout/message_element.xml
+++ b/app/src/main/res/layout/message_element.xml
@@ -26,9 +26,9 @@
         android:layout_gravity="center"
         android:text="" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/canceledMessageElementBtn"
-        style="@style/smallMainButton"
+        style="@style/smallButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
