--- a/app/src/main/res/layout/my_calendar.xml
+++ b/app/src/main/res/layout/my_calendar.xml
@@ -16,7 +16,7 @@
         app:layout_constraintVertical_bias="0.1"
         tools:layout_editor_absoluteX="1dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/continueMyCalendarBtn"
         style="@style/mainButton"
         android:layout_width="wrap_content"
