--- a/app/src/main/res/layout/my_time.xml
+++ b/app/src/main/res/layout/my_time.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.1"
         tools:layout_editor_absoluteX="0dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/saveMyTimeBtn"
         style="@style/mainButton"
         android:layout_width="wrap_content"
