--- a/app/src/main/res/layout/premium_element.xml
+++ b/app/src/main/res/layout/premium_element.xml
@@ -75,7 +75,7 @@
                 android:hint="Код" />
         </LinearLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/setPremiumPremiumElementBtn"
             style="@style/mainButton"
             android:layout_width="wrap_content"
