--- a/app/src/main/res/layout/review.xml
+++ b/app/src/main/res/layout/review.xml
@@ -58,9 +58,9 @@
                 android:inputType="textMultiLine|textCapSentences" />
         </LinearLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/rateReviewBtn"
-            style="@style/smallMainButton"
+            style="@style/smallButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
