--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="yellow">#f6db40</color>
     <color name="transparentGrey">#64d1d1d1</color>
 
+    <color name="darkBlue">#005F89</color>
+
     <color name="backgroundLightBlue">#D1E1E5</color>
 
     <color name="logInBackGround">#0093B7</color>
