--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Reg pages -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,7 +9,7 @@
     </style>
 
     <!-- Base application theme. -->
-    <style name="allPages" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="allPages" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:background">@color/backgroundLightBlue</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -225,15 +225,10 @@
     </style>
 
     <!-- Style for main buttons -->
-    <style name="baseButton">
-        <item name="android:width">260dp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
-        <item name="fontFamily">@font/roboto_bold</item>
-        <item name="android:elevation">5dp</item>
+    <style name="baseButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="loginButton" parent="baseButton">
@@ -256,16 +251,20 @@
         <item name="android:textColorHint">@color/white</item>
     </style>
 
-    <style name="smallMainButton">
-        <item name="android:textColor">@color/white</item>
+    <style name="smallButton" parent="baseButton">
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_marginStart">2dp</item>
+        <item name="android:layout_marginEnd">2dp</item>
+        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="cornerRadius">18dp</item>
+    </style>
+
+    <style name="scheduleButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textAlignment">center</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">14sp</item>
-        <item name="fontFamily">@font/roboto_bold</item>
-        <item name="android:elevation">5dp</item>
-        <item name="android:background">@drawable/main_button</item>
-        <item name="android:width">160dp</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">36dp</item>
     </style>
 
     <style name="weekDayText">
